add report to scan results

--- a/app/views/targets/show.html.erb
+++ b/app/views/targets/show.html.erb
@@ -4,6 +4,10 @@
   <b>Address:</b>
   <%= @target.address %>
 </p>
+<p>
+  <b>Scan results:</b>
+  <%= @target.report %>
+</p>
 
 
 <%= link_to 'Edit', edit_target_path(@target) %> |
