adjustments to report generation and display

--- a/app/views/targets/show.html.erb
+++ b/app/views/targets/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 <p>
   <b>Scan results:</b>
-  <%= @target.report %>
 </p>
+<pre><%= @target.report %></pre>
 
 
 <%= link_to 'Edit', edit_target_path(@target) %> |
